# batched-attestation-sim

./: .gitignore  AGENTS.md  README.md  pyproject.toml  suggestions.md  todo.md  x.txt
analysis/: arrival_cdf.py  drop_analysis.py  node_bw_profile.py  node_degree_vs_diameter.txt  plot_arrival_delays_cdf.py  plot_arrival_latency_cdf.py  prelim-analysis.py  send_size_histogram.py  subnet_aggregator_sim.py
configs/: attestations_32mesh_10fanout_partial_classic.yaml  classic_500_f500_t2.yaml  drop_probe_500_2t_1000f.yaml  drop_probe_500_2t_500f.yaml  experiment.yaml.sample  experiment_attprop_500_f500_t2.yaml  experiment_classic_partial_priority_32.yaml  experiment_classic_partial_priority_500_f1000_t2.yaml  experiment_classic_partial_priority_500_f2000_t2.yaml  experiment_classic_partial_priority_500_f500_t2.yaml  experiment_classic_vs_partial_500_2t_1000f.yaml  experiment_classic_vs_partial_500_f500_t2.yaml  experiment_dtier_debug_500_2t_1000f.yaml  experiment_dtier_super16_500_f500_t2.yaml  experiment_dtier_super24_500_f500_t2.yaml  experiment_dtier_vs_uniform_500_f500_t2.yaml  experiment_partial_vs_attprop_d8_500_f500_t2.yaml  experiment_pp_vs_attprop_smallpush_bigbitmap_500_f2000_t2.yaml  experiment_pp_vs_attprop_smallpush_bigbitmap_500_f4000_t2.yaml  experiment_pp_vs_attprop_smallpush_bigbitmap_500_f500_t2.yaml  experiment_priority_avail_500_f2000_t2.yaml  partial_500_2topics_1000fanout.yaml  partial_500_f500_t2.yaml  partial_vs_classic_512.yaml  simulation.yaml.sample  smoke_32.yaml  smoke_32_gossip.yaml  smoke_attprop_send_log_32.yaml  smoke_multitopic_60.yaml  (+4 more)
(+83 files in other folders)
