[project]
name = "simctl"
version = "0.1.0"
description = "CLI for simlab"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
simctl = "simctl.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.hatch.build.targets.wheel]
packages = ["simctl"]

[dependency-groups]
dev = [
    "numpy>=2.4.4",
]
